Remove target from build properties.
It's redundant.

--- a/edu.cuny.hunter.optionalrefactoring.ui/build.properties
+++ b/edu.cuny.hunter.optionalrefactoring.ui/build.properties
@@ -3,7 +3,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                bundle.properties,\
-               icons/,\
-               target/classes/
+               icons/
 src.includes = bundle.properties,\
                icons/
