--- a/edu.cuny.hunter.optionalrefactoring.core/build.properties
+++ b/edu.cuny.hunter.optionalrefactoring.core/build.properties
@@ -4,5 +4,4 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                OSGI-INF/,\
-               pom.xml,\
-               lib/
+               pom.xml
