--- a/edu.cuny.hunter.optionalrefactoring.ui/plugin.xml
+++ b/edu.cuny.hunter.optionalrefactoring.ui/plugin.xml
@@ -14,12 +14,18 @@
       <activeWhen>
         <with variable="selection">
           <iterate ifEmpty="false" operator="or">
+             <instanceof
+                   value="org.eclipse.jdt.core.IField">
+             </instanceof>
             <instanceof value="org.eclipse.jdt.core.IMethod"/>
             <instanceof value="org.eclipse.jdt.core.IType"/>
             <instanceof value="org.eclipse.jdt.core.IPackageFragment"/>
             <instanceof value="org.eclipse.jdt.core.IPackageFragmentRoot"/>
             <instanceof value="org.eclipse.jdt.core.ICompilationUnit"/>
             <instanceof value="org.eclipse.jdt.core.IJavaProject"/>
+            <instanceof
+                  value="org.eclipse.jdt.core.IInitializer">
+            </instanceof>
           </iterate>
         </with>
       </activeWhen>
