--- a/edu.cuny.hunter.optionalrefactoring.eval/.classpath
+++ b/edu.cuny.hunter.optionalrefactoring.eval/.classpath
@@ -3,11 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/commons-csv-1.1.jar" sourcepath="lib/commons-csv-1.1-src.zip">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:platform:/resource/edu.cuny.hunter.streamrefactoring.eval/lib/commons-csv-docs-1.1.zip!/commons-csv-1.1/apidocs"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry combineaccessrules="false" kind="src" path="/edu.cuny.citytech.refactoring.common.core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/edu.cuny.citytech.refactoring.common.eval"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/edu.cuny.citytech.refactoring.common.tests"/>
@@ -15,5 +10,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/edu.cuny.hunter.optionalrefactoring.core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/edu.cuny.hunter.optionalrefactoring.tests"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/edu.cuny.hunter.optionalrefactoring.ui"/>
+	<classpathentry kind="lib" path="/edu.cuny.citytech.refactoring.common.eval/lib/commons-csv-1.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
