--- a/edu.cuny.hunter.optionalrefactoring.eval/pom.xml
+++ b/edu.cuny.hunter.optionalrefactoring.eval/pom.xml
@@ -18,4 +18,5 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   		<artifactId>commons-csv</artifactId>
   		<version>1.1</version>
 	</dependency>
+  </dependencies>
 </project>
