--- a/edu.cuny.hunter.optionalrefactoring.eval/pom.xml
+++ b/edu.cuny.hunter.optionalrefactoring.eval/pom.xml
@@ -12,4 +12,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
   </parent>
   <artifactId>edu.cuny.hunter.optionalrefactoring.eval</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <dependencies>
+    <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-csv</artifactId>
+    <version>1.1</version>
+</dependency>
+  </dependencies>
 </project>
