Some work on coveralls.

--- a/edu.cuny.hunter.optionalrefactoring.tests.report/pom.xml
+++ b/edu.cuny.hunter.optionalrefactoring.tests.report/pom.xml
@@ -56,7 +56,7 @@
 			<groupId>edu.cuny.hunter.optionalrefactoring</groupId>
 			<artifactId>edu.cuny.hunter.optionalrefactoring.tests</artifactId>
 			<version>1.0.0</version>
-			<scope>compile</scope>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
