Revert "I don't think we need to have coverage for the UI."
This reverts commit 925e208557f4831471d2f8310121d0d760ba2e9c. Didn't seem to make a difference.

--- a/edu.cuny.hunter.optionalrefactoring.tests.report/pom.xml
+++ b/edu.cuny.hunter.optionalrefactoring.tests.report/pom.xml
@@ -43,6 +43,12 @@
     </dependency>
     <dependency>
       <groupId>edu.cuny.hunter.optionalrefactoring</groupId>
+      <artifactId>edu.cuny.hunter.optionalrefactoring.ui</artifactId>
+      <version>1.0.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>edu.cuny.hunter.optionalrefactoring</groupId>
       <artifactId>edu.cuny.hunter.optionalrefactoring.tests</artifactId>
       <version>1.0.0</version>
       <scope>test</scope>
