Remove commons-csv.jar.
It should come from the common plugin.

--- a/edu.cuny.hunter.optionalrefactoring.eval/build.properties
+++ b/edu.cuny.hunter.optionalrefactoring.eval/build.properties
@@ -4,10 +4,8 @@ bin.includes = plugin.xml,\
                .,\
                bundle.properties,\
                icons/,\
-               lib/,\
-               lib/commons-csv-1.1.jar
-src.includes = bundle.properties,\
-               icons/,\
                lib/
+src.includes = bundle.properties,\
+               icons/
 bin.excludes = lib/commons-csv-1.1-src.zip,\
                lib/commons-csv-docs-1.1.zip
