--- a/pom.xml
+++ b/pom.xml
@@ -59,9 +59,9 @@
   </profiles>
   <repositories>
     <repository>
-      <id>neon</id>
+      <id>2018-09</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/releases/neon</url>
+      <url>http://download.eclipse.org/releases/2018-09</url>
     </repository>
     <repository>
       <id>common-refactoring</id>
@@ -69,9 +69,9 @@
       <url>https://raw.githubusercontent.com/khatchad/Common-Eclipse-Refactoring-Framework/master/edu.cuny.citytech.refactoring.common.updatesite</url>
     </repository>
     <repository>
-      <id>neon-update</id>
+      <id>2018-09-update</id>
       <layout>p2</layout>
-      <url>http://download.eclipse.org/eclipse/updates/4.6</url>
+      <url>http://download.eclipse.org/eclipse/updates/4.9</url>
     </repository>
   </repositories>
   <build>
